test/scc_test/decl/semantic-errors/028.a
028.t:3:5: error: zero width for bit-field 'a'